# bgm-tv-api-python

./: .gitignore  LICENSE  README.md  bangumi_sdk.py  example.py  pyproject.toml
examples/: basic.py
src/bgmapi/: __init__.py  client.py  exceptions.py  models.py
tests/: test_client.py
